<resources>
    <string name="app_name">WinChat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="action_sign_up">sign up</string>
    <string name="don_t_have_an_account">Don\'t have and account ?</string>
    <string name="sign_up">sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <string name="have_an_account">Have an account ?</string>
    <string name="login">Sign in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_user">All User</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="status">Status</string>
    <string name="submit">submit</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="number_ofFriends">Total Friends</string>
    <string name="reject_friend_request" >Reject Friend Request</string>
</resources>
