<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup_main_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background">

    <!--    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">


            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/lasem"
                android:tint="@android:color/white" />


            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/username_background"
                android:drawableLeft="@drawable/ic_user_24dp"
                android:drawablePadding="16dp"
                android:textSize="@dimen/signinTextSize"
                android:hint="@string/name"
                android:padding="10dp"
                android:textColor="@color/loginActivityTextcolor"
                android:textColorHint="@color/darker_gray" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:inputType="textEmailAddress"
                android:background="@drawable/username_background"
                android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
                android:drawablePadding="16dp"
                android:textSize="@dimen/signinTextSize"
                android:hint="@string/prompt_email"
                android:padding="10dp"
                android:textColor="@color/loginActivityTextcolor"
                android:textColorHint="@color/darker_gray" />
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/username_background"
                android:id="@+id/password"
                android:textSize="@dimen/signinTextSize"
                android:drawableLeft="@drawable/ic_lock_outline_24dp"
                android:drawablePadding="16dp"
                android:hint="@string/prompt_password"
                android:padding="10dp"
                android:inputType="textPassword"
                android:textColor="@color/loginActivityTextcolor"
                android:textColorHint="@color/darker_gray" />



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_signin_background"
                android:id="@+id/btn_signup"
                android:textSize="20sp"
                android:text="@string/sign_up"
                android:textColor="@android:color/background_dark" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:layout_marginBottom="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_an_account"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/tv_login"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <!--    </android.support.v4.widget.NestedScrollView>-->


</RelativeLayout>