<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sadikul.winchat.Activities.ProfileActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content"
        android:id="@+id/profileActivityToolbar"></android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/ll_progressbar">
            <ProgressBar
                android:layout_width="wrap_content"
                android:id="@+id/profressbar"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/profileActivityToolbar"
        android:scaleType="centerCrop"
        android:src="@color/colorPrimary"
        android:id="@+id/user_profileImageview" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical"
        android:layout_below="@+id/user_profileImageview">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">
                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/tv_name"
                        android:text="@string/name"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="match_parent"
                        android:id="@+id/tv_status"
                        android:gravity="center"
                        android:textSize="16sp"
                        android:layout_marginTop="5dp"
                        android:text="@string/status"
                        android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:weightSum="2"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:id="@+id/tv_numberOfFriends"
                    android:text="@string/number_ofFriends"
                    android:gravity="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_width="wrap_content"
                    android:id="@+id/btn_sendFriendRequest"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_sendrequest_back"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/send_friend_request"
                    android:layout_height="wrap_content" />
                <Button
                    android:layout_width="wrap_content"
                    android:id="@+id/btn_rejectFriendRequest"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:visibility="invisible"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_sendrequest_back"
                    android:layout_marginTop="10dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/reject_friend_request"
                    android:layout_height="wrap_content" /> </LinearLayout>
    </LinearLayout>
</RelativeLayout>
