<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.sadikul.winchat.Activities.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/ll_progressbar"
        android:layout_height="match_parent">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/progressbar"
                android:progressTint="#ffffff"
                android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/ll_one"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <android.support.v7.widget.Toolbar
            android:id="@+id/settingsToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="116dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:id="@+id/ll_two"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_three"
        android:visibility="gone"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/change_image"
            android:layout_width="200dp"
            android:background="@drawable/btn_signin_background"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/change_image" />

        <Button
            android:id="@+id/change_status"
            android:layout_width="200dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@drawable/btn_changestatus_background"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:text="@string/change_status" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
